fix: Changed the background-color of button:hover, so now it is visible

--- a/nwg-dock-hyprland/style.css
+++ b/nwg-dock-hyprland/style.css
@@ -13,7 +13,7 @@ window {
 
 #active {
 	/* This is to underline the button representing the currently active window */
-	border-bottom: solid 2px /* 2px */;
+	border-bottom: solid 2px /* 1px */;
 	border-color: rgba(255, 255, 255, 0.3) /* rgba(54, 54, 79, 0.9) rgba(255, 255, 255, 0.3) */
 }
 
@@ -33,7 +33,7 @@ button {
 }
 
 button:hover {
-	background-color: rgba(54, 54, 79, 0.2) /* rgba(255, 255, 255, 0.15) */;
+	background-color: rgba(255, 255, 255, 0.15) /* rgba(54, 54, 79, 0.2) rgba(255, 255, 255, 0.15) */;
 	border-radius: 2px;
 }
 
